--- a/info.yaml
+++ b/info.yaml
@@ -1,30 +1,22 @@
 # Tiny Tapeout project information
 project:
-  title:        "ASIC Onboarding Project - Hugo Quan"      # Project title
-  author:       "Hugo Quan"      # Your name
-  discord:      "hugo.quan33"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "SPI-controlled PWM peripheral for Tiny Tapeout."      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  title:        "ASIC Onboarding Project - Hugo Quan"
+  author:       "Hugo Quan"
+  discord:      "hugo.quan33"
+  description:  "SPI-controlled PWM peripheral for Tiny Tapeout."
+  language:     "Verilog"
+  clock_hz:     0
 
-  # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
+  tiles: "1x1"
 
-  # Your top module name must start with "tt_um_". Make it unique by including your github username:
   top_module:  "tt_um_uwasic_onboarding_hugo"
 
-  # List your project's source files here.
-  # Source files must be in ./src and you must list each source file separately, one per line.
-  # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "tt_um_uwasic_onboarding_HugoQuan.v"
-    -- pwm_peripheral.v  
-    - spi_pherpheral.v
+    - "project.v"
+    - "pwm_peripheral.v"
+    - "spi_peripheral.v"
 
-# The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
-# This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
-  # Inputs
   ui[0]: "SCLK"
   ui[1]: "COPI"
   ui[2]: "nCS"
@@ -34,7 +26,6 @@ pinout:
   ui[6]: ""
   ui[7]: ""
 
-  # Outputs
   uo[0]: "OUT_0"
   uo[1]: "OUT_1"
   uo[2]: "OUT_2"
@@ -44,7 +35,6 @@ pinout:
   uo[6]: "OUT_6"
   uo[7]: "OUT_7"
 
-  # Bidirectional pins
   uio[0]: "OUT_8"
   uio[1]: "OUT_9"
   uio[2]: "OUT_A"
@@ -54,5 +44,4 @@ pinout:
   uio[6]: "OUT_E"
   uio[7]: "OUT_F"
 
-# Do not change!
 yaml_version: 6
